PATCH user endpoint/docs
